# Ray-Tracer

./: CMakeLists.txt  README.md  conanfile.txt
craytracer/: CMakeLists.txt  main.c
craytracer/include/: allocator.h  camera.h  color.h  hitRecord.h  material.h  outfile.h  ray.h  sphere.h  stb_imageINC.h  texture.h  types.h  util.h
craytracer/sources/: allocator.c  camera.c  color.c  hitRecord.c  material.c  outfile.c  ray.c  sphere.c  texture.c  util.c
libs/include/: hypatiaINC.h
tests/: CMakeLists.txt  camera_test.c  color_test.c  hitRecord_test.c  material_test.c  ray_test.c  sphere_test.c  testutils.h  util_test.c
